2003-04-07    Jimmy Yen <jimmy@yen.tp>

	* Set resolutions for USB tablets.

2003-04-06    John E. Joganic <john@joganic.com>

	* Refactored xf86Wacom.c into separate files.

2003-04-02    John E. Joganic <john@joganic.com>

	* Added J. Yen's "misc fixes" patch to xf86Wacom.c
	* Added J. Paisley's "reattach" patch to evdev.c

2003-03-31    John E. Joganic <john@joganic.com>

	* Added mousedev.c with fix to ignore wacom

2003-03-22    John E. Joganic <john@joganic.com>

	* Added ncurses detection.
	* Cleaned up output of xidump.
	* Added Dean Townsley's ISDV4 patch.

2003-03-08    John E. Joganic <john@joganic.com>

	* Added curses functionality to xidump.c, now default
	* xidump now builds by default

2003-03-07    John E. Joganic <john@joganic.com>

	* Added tabletdev.c framework (based on mousedev.c)
	* Added device list to xidump.c including class info
	* Added raw event notification

2003-03-06    John E. Joganic <john@joganic.com>

	* Applied Ping Cheng's suppress patch
	* Added evdev.c to project, contains Jonathan Paisley's oops patch
	* Added input.c to project

2003-02-23    John E. Joganic <john@joganic.com>

	* Added xidump and gtk config options

2003-02-22    John E. Joganic <john@joganic.com>

	* Applied Ping Cheng's multi-monitor patch
	* Added build option for Xfree86 v3.x; testing only
	* Applied Jimmy Yen's origin patch

2003-02-12    John E. Joganic <john@joganic.com>

	* Applied Ping Cheng's eraser patch for PL in wacom.c
	* Applied Ping Cheng's USB patch for xf86Wacom.c
	* Applied Ping Cheng's device_on patch for xf86Wacom.c

2003-01-31    John E. Joganic <john@joganic.com>

	* Branched 0.4.0 production.  Updated version to 0.5.0-beta.
	* Added Ping Cheng's PL code.
	* Fixed serial number code in wacom.c, xf86Wacom.c, and wacserial.c such
	  that they all correspond.

2003-01-27    John E. Joganic <john@joganic.com>

	* Changed macros from WAC_ to WCM_ due to bug in Mandrake 9 autoconf.